syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.zapp.content.client.v1";

package com.glance.spaces.zapp.content.client.v1;

import "com/glance/spaces/common/common_client_params.proto";
import "com/glance/spaces/snp/snp_params.proto";

message ClientNukeMessage {
  common.CommonClientParams common_params = 1;
  snp.SnpParams snp_params = 2;
}