syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.snp.service.v1";

package com.glance.spaces.snp.service.v1;

import "com/glance/spaces/snp/service/v1/client_nuke_message.proto";
import "com/glance/spaces/snp/service/v1/server_nuke_message.proto";

service NukeService {
  rpc HandleNukeCommand (stream zapp.content.client.v1.ClientNukeMessage) returns (stream zapp.content.server.v1.ServerNukeMessage) {}
}